# python-symphony

./: .gitignore  .travis.yml  HACKING.rst  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  rules
examples/: example-bot.cfg  hello_world.py
symphony/: __init__.py  agent.py  auth.py  config.py  connections.py  crypt.py  mml.py  pod.py
symphony/Agent/: __init__.py  base.py
symphony/Auth/: __init__.py
symphony/Config/: __init__.py
symphony/Crypt/: __init__.py
symphony/Mml/: __init__.py
symphony/Pod/: __init__.py  admin.py  base.py  connections.py  groups.py  pod.py  streams.py  users.py
symphony/RESTful/: __init__.py  base.py  nopkcs.py  pkcs.py
tests/: agent_test.py  mml_parser_test.py  pod_connections_test.py  pod_groups_test.py  pod_streams_test.py  pod_users_test.py
