[metadata]

# package name / info
name = python-symphony
summary = Symphony Agent API Module 
description-file =
    README.md

# The Symphony SE Team is Responsible for this
author = Symphony Engineering Services
author-email = symphony-engservices@symphony.com
home-page = http://symphony.engineering/

# classifiers are a pypi thing, but worth having
classifier =
    Environment :: SE
    Intended Audience :: Information Technology
    Intended Audience :: DevOps
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

#  Specifies that a pure-python wheel is "universal" python2 / 3 compat
[wheel]
universal = 1

# pbr config
[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
