[metadata]

# package name / info
name = python-symphony
summary = Symphony Agent API Module 
description-file = 
    README.rst

author = Matt Joyce
author-email = matt@nycresistor.com
home-page = https://github.com/symphonyoss/pyhton-symphony
license = Apache 2.0
# classifiers are a pypi thing, but worth having
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

#  Specifies that a pure-python wheel is "universal" python2 / 3 compat
[wheel]
universal = 1

# pbr config
[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
